--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -9,7 +9,7 @@
   }
   
   .array-bar {
-    width: 5px;
+    width: 12px;
     display: inline-block;
     margin: 0 1px;
   }
@@ -27,7 +27,19 @@
     color: white;
     font-size: 16px;
   }
-
+ .btt {
+    cursor: no-drop;
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    font-weight: bold;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #34495e;
+    border: 0px;
+    color: red;
+    font-size: 16px;
+  }
   .header{
     padding: 20px;
     width: 100%;
@@ -51,7 +63,7 @@
     font-size: 16px;
 
   }
-  .bt2 {
+  .bt2 {  
     
     padding-left: 7px;
     padding-right: 7px;
